css/style.css
/* Variables globals utlitzats per tota la pàgina */
/* S'utiltizen per mantenir una pàgina amb més coherencia entre tots els elements */
/* A més de colors, es declaren els border-radius (com el redondeixen les vores) */
/* I com es veuen totes le animaciones */
:root {
  --bg-color: #fff;
  --primary: rgb(35, 69, 44);
  --primary-hover: rgb(62, 95, 71);
  --alt-text-color: #fff;
  --border-radius: 6px;
  --transition: 0.08s ease-out;
}

/* Estils de normalització i de layout */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  line-height: 1.7;
  font-family: "Inter", sans-serif;
}

/* Per defecte, l'efecte scroll en els navegadors és bruta */
/* Aquesta propietat les suavitza */
html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--bg-color);
}

/* Donar a totes les capçeleres la mateixa font  */
h1,
h2,
h3,
h4 {
  font-family: "Prata", serif;
}

li {
  list-style-type: none;
}

a {
  color: #000;
  text-decoration: none;
}

button:hover {
  cursor: pointer;
}

/* Secció header */
.header__container {
  position: sticky;
  top: 0;
  color: var(--primary);
  background-color: var(--bg-color);
  z-index: 10;
  border-bottom: 2px solid var(--primary);
  -webkit-box-shadow: 0px 2px 16px 1px rgba(0, 0, 0, 0.15);
  box-shadow: 0px 2px 16px 1px rgba(0, 0, 0, 0.15);
}

.header__nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.5rem 2.5rem;
}

.header__nav > a:hover {
  text-decoration: underline;
}

.header__title {
  color: var(--primary);
}

.header__link > a:hover {
  /* color: var(--primary); */
  text-decoration: underline;
}

.header__list {
  display: flex;
  gap: 2rem;
}

/* Secció hero */
.hero__container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hero__text {
  position: absolute;
  background-color: var(--primary);
  opacity: 0.9;
  color: white;
  padding: 2rem;
  padding-right: 7rem;
  margin-left: 3rem;
  border-radius: var(--border-radius);
}

.hero__image-container {
  /* width: 100vw; */
  height: 85vh;
}

/* Classe per afegir a totes les imatges */
.image {
  object-fit: cover;
  width: 100%;
  height: 100%;
  border-radius: var(--border-radius);
}

/* Botó de reserva que es troba abaix a la dreta de forma fixe */
.btn__reserva {
  position: fixed;
  background-color: var(--primary);
  color: #fff;
  padding: 0.5rem 1rem;
  border-radius: var(--border-radius);
  bottom: 2.6rem;
  right: 2.6rem;
  transition: background var(--transition);
}

.btn__reserva:hover {
  background-color: var(--primary-hover);
}

/* Separacions entre seccions */
.section__container {
  padding: 5rem 12%;
}

.section__title {
  font-size: 2rem;
  color: var(--primary);
  margin-bottom: 2rem;
  scroll-margin-top: 100px; /* Marge per que el header (fixed), no tapi els títols */
}

/* Secció Sobre nosaltres */
.aboutus__content {
  display: grid;
  grid-template-areas: "aboutus-image aboutus-text";
  grid-template-columns: 30% 1fr;
  gap: 20px;
  align-items: center;
  margin-bottom: 2.5rem;
}

.aboutus__content--reversed {
  grid-template-areas: "aboutus-text aboutus-image";
  grid-template-columns: 1fr 30%;
}

.aboutus__image-container {
  grid-area: aboutus-image;
  width: 100%;
}

.aboutus__text {
  grid-area: aboutus-text;
  padding: 0 4rem;
}

/* Secció de Menú */
.carta__title {
  font-size: 1.75rem;
  border: 2px dashed #000;
  border-radius: var(--border-radius);
  text-align: center;
  align-self: center;
  padding: 0.5rem;
}

.menu__container {
  display: grid;
  grid-template-columns: 20% 1fr 1fr;
  grid-template-rows: 8rem auto auto auto auto;
  grid-template-areas:
    "menu-title menu-title menu-title"
    "menu1 content1 content1"
    "menu1 pic1 pic2"
    "menu2 content2 content2"
    "menu2 pic3 pic4";
  row-gap: 3rem;
  column-gap: 5rem;
}

/* Declaracions de Grid-areas */
#menu-title {
  grid-area: menu-title;
}

#menu1 {
  grid-area: menu1;
}

#menu2 {
  grid-area: menu2;
}

#content1 {
  grid-area: content1;
}

#content2 {
  grid-area: content2;
}

#pic1 {
  grid-area: pic1;
}

#pic2 {
  grid-area: pic2;
}

#pic3 {
  grid-area: pic3;
}

#pic4 {
  grid-area: pic4;
}

.menu__title {
  /* background-color: #c4c4c4; */
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 1.2rem;
  border: 1px dashed #000;
  border-radius: var(--border-radius);
}

.menu__info-title {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.menu__images {
  padding: 2rem 4rem;
  display: flex;
  justify-content: space-between;
  gap: 2rem;
}

.menu__element {
  position: relative;
  min-width: 15rem;
}

.menu__element:hover > .menu__image-text {
  opacity: 1;
}

.menu__image-text {
  opacity: 0;
  position: absolute;
  bottom: 0;
  justify-self: center;
  text-align: center;
  align-content: center;
  color: #fff;
  background-color: #254123df;
  width: 100%;
  height: 20%;
  border-radius: var(--border-radius);
  transition: opacity var(--transition);
}

.menu__image-container {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.gallery__container {
  --gap: 10px;
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
}

/* Secció de Galeria */
.gallery__container > .image {
  /* background-color: blue; */
  border: 2px solid #023b15b7;
  height: 12rem;
  width: calc(25% - var(--gap));
  transition: all var(--transition);
}

/* .gallery__container > div:nth-child(1), div:nth-child(4), div:nth-child(5), div:nth-child(8) { */
.gallery__container > .image:nth-child(4n + 1),
.gallery__container > .image:nth-child(4n) {
  /* background-color: purple; */
  filter: brightness(0.75);
}

.gallery__container > .image:hover {
  cursor: pointer;
  box-shadow: 0 2px 4px 3px rgba(0, 0, 0, 0.4);

  transform: scale(1.08) rotate(6deg);
  filter: grayscale(.5);
  z-index: 1;
}

/* Secció de reserves */
.reservation-form__container {
  margin: 0 auto;
  padding: 2rem 8rem;
}

.reservation-form__grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1.2rem;

  grid-template-areas:
    "nom-grid numero_persones-grid"
    "data-grid hora-grid"
    "descripcio-grid descripcio-grid";
}

#nom-grid {
  grid-area: nom-grid;
}

#numero_persones-grid {
  grid-area: numero_persones-grid;
}

#data-grid {
  grid-area: data-grid;
}

#hora-grid {
  grid-area: hora-grid;
}

#descripcio-grid {
  grid-area: descripcio-grid;
}

.reservation-form__field {
  display: flex;
  flex-direction: column;
}

/* .reservation-form__field--full {
  grid-column: span 2;
} */

.reservation-form__label {
  margin-bottom: 0.3rem;
  font-size: 0.9rem;
}

.reservation-form__required {
  font-size: 0.8rem;
  color: rgb(190, 0, 0);
}

.reservation-form__input,
.reservation-form__textarea {
  padding: 0.5rem;
  border: 1px solid #999;
  border-radius: var(--border-radius);
  font-size: 0.9rem;
}

.reservation-form__textarea {
  min-height: 100px;
  resize: vertical;
}

.reservation-form__actions {
  display: flex;
  justify-content: flex-end;
  margin-top: 1.5rem;
}

.reservation-form__button {
  font-size: 0.9rem;
  border: none;
  border-radius: var(--border-radius);
  padding: 0.75rem 2rem;
  color: var(--bg-color);
  background-color: var(--primary);
}

.reservation-form__button:hover {
  background-color: var(--primary-hover);
}

/* Secció de footer */
.footer__container {
  background-color: var(--primary);
  color: var(--alt-text-color);
  padding: 4rem 2.5rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer__list {
  display: flex;
  gap: 2rem;
}

.footer__element {
  display: flex;
  gap: 0.5rem;
}

.footer__link {
  color: var(--alt-text-color);
}

.footer__link:hover {
  text-decoration: underline;
}

.footer__logo {
  width: 3rem;
  height: 3rem;
}

/* Estils per pantalles mitjanes (com tablets, iPads...) i més petits */
/* Per aconseguir una pàgina Responsive */
@media (max-width: 768px) {
  .header__nav {
    flex-direction: column;
  }

  .hero__text {
    text-align: center;
    padding: 3rem;
    margin: 0;
    align-self: center;
  }

  .aboutus__content {
    margin-bottom: 5rem;
    grid-template-rows: 1fr auto;
    grid-template-columns: 100%;
    grid-template-areas:
      "aboutus-image"
      "aboutus-text";
  }

  .aboutus__content--reversed {
    margin-bottom: 0;
    grid-template-rows: 100%;
    grid-template-columns: 40% 1fr;
    grid-template-areas: "aboutus-image aboutus-text";
    column-gap: 3rem;
  }

  .aboutus__text {
    padding: 0;
    margin-bottom: 1rem;
  }

  .aboutus__image-container {
    width: 100%;
    justify-self: center;
  }

  .menu__container {
    grid-template-columns: 20% 1fr 1fr;
    grid-template-rows: 8rem auto auto auto auto auto;
    grid-template-areas:
      "menu-title menu-title menu-title"
      "menu1 content1 content1"
      "menu1 pic1 pic1"
      "menu1 pic2 pic2"
      "menu2 content2 content2"
      "menu2 pic3 pic3"
      "menu2 pic4 pic4";
  }

  .gallery__container {
    justify-content: center;
  }

  .gallery__container > .image {
    --gap: 20px;
    width: calc(50% - var(--gap));
  }

  .reservation-form__container {
    padding: 0;
  }

  .reservation-form {
    padding: 2rem 0;
  }

  .footer__container {
    justify-content: center;
  }

  .footer__logo {
    display: none;
  }
}

/* Estils per a telèfons mòbils */
/* Principalment es canvien mides per mostrar tota la informació possible */
@media (max-width: 576px) {
  .header__container {
    position: relative;
  }

  .header__title {
    font-size: 1.4rem;
    white-space: nowrap;
  }

  .header__nav {
    justify-content: space-between;
    padding: 0.5rem 1rem;
    flex-direction: column;
    /* align-items: normal; */
    gap: 0.5rem;
  }

  .header__list {
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
  }

  .header__link {
    font-size: 0.9rem;
  }

  .hero__text {
    margin: 1rem;
  }

  .aboutus__content {
    padding: 0 2rem;
  }

  .aboutus__content--reversed {
    margin-bottom: 0;
    grid-template-rows: 1fr auto;
    grid-template-columns: 100%;
    grid-template-areas:
      "aboutus-image"
      "aboutus-text";
  }

  .aboutus__image-container {
    width: 100%;
  }

  .section__container {
    padding: 3rem 1rem;
  }

  .menu__element {
    min-width: 0;
  }

  .menu__title {
    font-size: 1.3rem;
    padding: 1rem;
  }

  .menu__container {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 8rem auto auto auto auto auto auto;
    grid-template-areas:
      "menu-title menu-title"
      "menu1 menu1"
      "content1 content1"
      "pic1 pic2"
      "menu2 menu2"
      "content2 content2"
      "pic3 pic4";
    row-gap: 3rem;
    column-gap: 1rem;
  }

  .gallery__container > .image {
    width: 100%;
  }

  .footer__list {
    gap: 1rem;
    flex-direction: column;
  }
}

